{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 68,
  "lineage": "9ddd66f9-1c5e-60f2-219b-e7169a8406c1",
  "resources": [
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:security-group/sg-0dc2c684cb556a46a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0dc2c684cb556a46a",
            "ingress": [],
            "name": "retail-store-e7ep-cluster-20260815174110620200000004",
            "name_prefix": "retail-store-e7ep-cluster-",
            "owner_id": "195663986124",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-e7ep-cluster",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-e7ep-cluster",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:security-group/sg-07b0014aeaac5ea1b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07b0014aeaac5ea1b",
            "ingress": [],
            "name": "retail-store-e7ep-node-20260815174110620200000005",
            "name_prefix": "retail-store-e7ep-node-",
            "owner_id": "195663986124",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-e7ep-node",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "owned"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-e7ep-node",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3696952381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc2c684cb556a46a",
            "security_group_rule_id": "sgr-0bf6b5b50e6d8523f",
            "self": false,
            "source_security_group_id": "sg-07b0014aeaac5ea1b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2745243403",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-02baedfaa9df91cb4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3077264961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-04b614420675f8538",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2815771816",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0311f381d9dcedc49",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1855398718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0a526e9907e658171",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2110463775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-08c4224dbf52c58f0",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-426388692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0cb755874611df4c9",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1622588021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0073dc619748b91fd",
            "self": false,
            "source_security_group_id": "sg-0dc2c684cb556a46a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3679840919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0911a7ea355839117",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3986962542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-01e35549f404c61ad",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1241226113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07b0014aeaac5ea1b",
            "security_group_rule_id": "sgr-0e4457ff3a3a69442",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:network-acl/acl-06d79ac94ff1641f3",
            "default_network_acl_id": "acl-06d79ac94ff1641f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06d79ac94ff1641f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "195663986124",
            "subnet_ids": [
              "subnet-00d5d3b5f0962c0fe",
              "subnet-030a9020e7a068654",
              "subnet-03e1470ae8b6a57dd",
              "subnet-05517ae92e72d7b1f",
              "subnet-0cefd4ff2644f859c"
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:route-table/rtb-00dfaeac56f5b481e",
            "default_route_table_id": "rtb-00dfaeac56f5b481e",
            "id": "rtb-00dfaeac56f5b481e",
            "owner_id": "195663986124",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:security-group/sg-0ab8cdb7b2599d1d4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ab8cdb7b2599d1d4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "195663986124",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d4f7dc54cef4775",
            "arn": "arn:aws:ec2:us-west-2:195663986124:elastic-ip/eipalloc-05d4f7dc54cef4775",
            "domain": "vpc",
            "id": "eipalloc-05d4f7dc54cef4775",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-161-55-192.us-west-2.compute.amazonaws.com",
            "public_ip": "35.161.55.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:internet-gateway/igw-01d54d99556038814",
            "id": "igw-01d54d99556038814",
            "owner_id": "195663986124",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d4f7dc54cef4775",
            "association_id": "eipassoc-0a2123d2b7481ea56",
            "connectivity_type": "public",
            "id": "nat-07a82578009a80913",
            "network_interface_id": "eni-01c1a4b874495af81",
            "private_ip": "10.0.0.103",
            "public_ip": "35.161.55.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030a9020e7a068654",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0894c84fef5fcbe0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07a82578009a80913",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0894c84fef5fcbe0d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d54d99556038814",
            "id": "r-rtb-00784669fe36ec4db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00784669fe36ec4db",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:route-table/rtb-0894c84fef5fcbe0d",
            "id": "rtb-0894c84fef5fcbe0d",
            "owner_id": "195663986124",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:route-table/rtb-00784669fe36ec4db",
            "id": "rtb-00784669fe36ec4db",
            "owner_id": "195663986124",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc59f1c39c1492b2",
            "route_table_id": "rtb-0894c84fef5fcbe0d",
            "subnet_id": "subnet-05517ae92e72d7b1f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f952acdd9075865",
            "route_table_id": "rtb-0894c84fef5fcbe0d",
            "subnet_id": "subnet-0b2756dabb1c7a507"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012f7e1a4867a15f8",
            "route_table_id": "rtb-0894c84fef5fcbe0d",
            "subnet_id": "subnet-00d5d3b5f0962c0fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec73ddb4cc799aa",
            "route_table_id": "rtb-00784669fe36ec4db",
            "subnet_id": "subnet-030a9020e7a068654"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09195b931e3eb2bd1",
            "route_table_id": "rtb-00784669fe36ec4db",
            "subnet_id": "subnet-03e1470ae8b6a57dd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0855349f95be3c024",
            "route_table_id": "rtb-00784669fe36ec4db",
            "subnet_id": "subnet-0cefd4ff2644f859c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-05517ae92e72d7b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05517ae92e72d7b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-0b2756dabb1c7a507",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2756dabb1c7a507",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-00d5d3b5f0962c0fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d5d3b5f0962c0fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-030a9020e7a068654",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a9020e7a068654",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-03e1470ae8b6a57dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e1470ae8b6a57dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:subnet/subnet-0cefd4ff2644f859c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cefd4ff2644f859c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195663986124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-e7ep": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a659ec6c624d7c05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:195663986124:vpc/vpc-0a659ec6c624d7c05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d79ac94ff1641f3",
            "default_route_table_id": "rtb-00dfaeac56f5b481e",
            "default_security_group_id": "sg-0ab8cdb7b2599d1d4",
            "dhcp_options_id": "dopt-0bff19c1ed86abee6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a659ec6c624d7c05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dfaeac56f5b481e",
            "owner_id": "195663986124",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2026-08-15",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAS3DT3PXGO7Z7N6FPX",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}